combined all css into styles.css

--- a/styles.css
+++ b/styles.css
@@ -80,8 +80,6 @@ a {
 	color: black;
 }
 
-
-
 .race-info {
 	text-align: right;
 }
@@ -107,12 +105,12 @@ a {
 .nav-fill {
 	/* makes the background of the current top nav label gray */
 	background-color: lightgray;
-    color: black;
+	color: black;
 	border-radius: 5px;
 }
 
 .nav-item a {
-    color: black;
+	color: black;
 }
 
 /* 4. footer */
@@ -120,6 +118,14 @@ a {
 .footer {
 	background-color: #f2f2f2; /* or any color you prefer */
 	padding: 20px 0;
+}
+
+.footer a {
+    color: gray;
+}
+
+.footer a:hover {
+    color: gray;
 }
 
 .social-icon {
@@ -210,7 +216,6 @@ a {
 #racedayCarousel .carouselBottomBtns .btn {
 	background-color: #b8c8db; /* #b6cbe5 */
 	color: white;
-
 }
 
 /* 6b. Leaderboard and Schedule */
@@ -226,8 +231,8 @@ a {
 }
 
 .leaderboardNSchedule .dividerContainer {
-    /* this is the horizontal line that separates leaderboard and schedule in mobile view */
-    display: none;
+	/* this is the horizontal line that separates leaderboard and schedule in mobile view */
+	display: none;
 }
 
 /* 6c. Leaderboard */
@@ -284,7 +289,7 @@ a {
 /* 6d. schedule at a glance */
 .schedule {
 	/* this is the overall container for the schedule section */
-    position: relative;
+	position: relative;
 }
 
 .schedule .horizontalCards {
@@ -320,7 +325,7 @@ a {
 
 /* 6e. raceday resources */
 .racedayResources {
-    /* this is the overall container for raceday resources */
+	/* this is the overall container for raceday resources */
 	margin-top: 2vmin;
 	margin-bottom: 3vmin;
 }
@@ -365,15 +370,15 @@ a {
 }
 
 .racedayResources .activitiesImg {
-	width: 100%; 
-	height: 16vmin; 
+	width: 100%;
+	height: 16vmin;
 	object-fit: cover;
 }
 
 /* 6f. Membership */
 
 .membership {
-    /* this is the overall container for membership */
+	/* this is the overall container for membership */
 	margin-top: 2vmin;
 	width: 100%;
 }
@@ -398,7 +403,7 @@ a {
 }
 
 .outsetBtn {
-    /* this is the button style for the membership section */
+	/* this is the button style for the membership section */
 	border: 4px outset rgb(211, 209, 209);
 	border-radius: 5vmin;
 	width: 100%;
@@ -465,7 +470,134 @@ a {
 	line-height: 0.8rem;
 }
 
+/* WhatIsBuggy Page */
+.bg-cmu {
+	/* cmu red color (self-defined) */
+	background-color: #8b0000 !important;
+}
 
+/* Header and carousel css */
+.buggyPage .header {
+	color: black;
+	text-align: left;
+	padding: 0;
+	margin-top: 0;
+	position: relative;
+	top: -8vmin;
+}
+
+.buggyPage .top_intro {
+	font-size: 216.66667%;
+	margin: 2% 0px 1% 0px;
+}
+
+.whatisbuggyheader {
+	font-size: 35px;
+}
+
+.buggyPage .background_image {
+	position: relative;
+	width: 100%;
+	z-index: 0;
+}
+
+.buggyPage #carouselExampleCaptions {
+	margin: -2% 0 0 0;
+}
+
+/* 1/3 section "What is Buggy" css */
+.buggyPage .top_container {
+	max-width: 80%;
+	margin: 0% 10% 20% 10%;
+}
+
+.whatIsBuggy {
+	max-width: 50%;
+	float: left;
+}
+
+.buggyPage .whenIsIt {
+	max-width: 45%;
+	float: right;
+	background-color: #d9d9d9;
+	border-radius: 5px;
+	padding: 10px 20px 20px 20px;
+	margin: 6% 0 0 0;
+}
+
+.buggyPage .card1 {
+	width: 80%;
+	border-radius: 10px;
+	float: left;
+	margin: 0%;
+	max-height: 100%;
+	background-color: #8b0000;
+}
+
+.buggyPage .video {
+	width: 560px;
+	height: 370px;
+	clear: both;
+	margin: 1% 0 0 0;
+	max-width: 100%;
+	float: right;
+}
+
+.buggyPage .card_text {
+	color: white;
+	font-size: 13px;
+}
+
+.buggyPage #card_separation {
+	min-height: 100px;
+	max-height: 140px;
+	margin: 1% 0px 1% 0px;
+}
+
+.buggyPage #readmore {
+	background-color: #8b0000;
+	border-bottom: 3px solid;
+	border-color: #8b0000;
+	border-radius: 10px;
+	color: white;
+}
+
+/* 2/3 section "Begin Your Buggy Journey" css */
+.buggyPage .card2 {
+	width: 100%;
+	margin: auto;
+	min-height: 100%;
+	background-color: #d9d9d9;
+}
+
+.buggyPage .middle_container {
+	max-width: 80%;
+	clear: both;
+	margin: 0% 10% 5% 10%;
+}
+
+.buggyPage #card_separation2 {
+	margin: 1% 0px 1% 0px;
+}
+
+/* 3/3 section "Helpful Resources" css */
+
+.buggyPage .card-img-top {
+	height: 70%;
+}
+
+.buggyPage .third_container {
+	max-width: 80%;
+	clear: both;
+	margin: 0% 10% 5% 10%;
+}
+
+.buggyPage .separation {
+	width: 100%;
+	margin: auto;
+	height: 3;
+	background-color: #8b0000;
+}
 
 /* History Page */
 .header {
@@ -568,19 +700,19 @@ a {
 /* media queries */
 @media (max-width: 576px) {
 	/* homepage */
-    #racedayCarousel .carouselBottomBtns .btn {
-        height: 10vmin;
-        overflow: hidden;
-    }
-    
-    .schedule {
-        margin-top: 5vmin;
-    }
+	#racedayCarousel .carouselBottomBtns .btn {
+		height: 10vmin;
+		overflow: hidden;
+	}
+
+	.schedule {
+		margin-top: 5vmin;
+	}
 
 	.schedule .horizontalCards .scheduleDescription {
 		display: none;
 	}
-	
+
 	.header-top .container-fluid .row > div:first-child > span {
 		/* Specific targeting to hide the "CMU BUGGY ALUMNI ASSOCIATION" text on mobile */
 		display: none;
@@ -604,9 +736,9 @@ a {
 		font-size: 1.5em; /* Adjust size as needed */
 	}
 
-    .mobile-only #BuggyAlumniAssociationText {
-        display: none;
-    }
+	.mobile-only #BuggyAlumniAssociationText {
+		display: none;
+	}
 
 	.race-info span {
 		/* Hide the race info text on mobile */
@@ -636,38 +768,46 @@ a {
 		text-decoration: none;
 	}
 
-	.navbar-toggler {
+	.homepage .navbar-toggler {
 		position: relative;
 		top: -11vmin;
-        left: 85%;
+		left: 85%;
 	}
 
+	.history .navbar-toggler {
+		position: relative;
+		top: -10vmin;
+	}
+
+	.buggyPage .navbar-toggler {
+		position: relative;
+		top: -10vmin;
+	}
 
 	.navbar-collapse {
 		margin-top: 5px;
 		margin-bottom: 5px;
 		padding: 0;
-		position: relative; 
+		position: relative;
 		top: -8vmin;
 	}
 }
 
-
 @media screen and (min-width: 576px) {
-    /* nav bar */
-    .navbar {
-        margin-bottom: 5vmin;
-    }
+	/* nav bar */
+	.navbar {
+		margin-bottom: 5vmin;
+	}
 
-    .mobile-only #BuggyAlumniAssociationText {
+	.mobile-only #BuggyAlumniAssociationText {
 		/* Styling for the Buggy Alumni Association text */
 		display: block;
 		color: white;
 		font-size: 1em; /* Adjust size as needed */
 	}
 
-    .mobile-only #BAAText {
-        /* targets the BAA text */
+	.mobile-only #BAAText {
+		/* targets the BAA text */
 		display: none;
 	}
 
@@ -676,14 +816,14 @@ a {
 		margin-right: 10px; /* Space between the logo and the "BAA" text */
 	}
 
-    .navbar-toggler {
-        position: absolute;
-        left: 85%;
-        top: -7vmin;
-    }    
-    
-    /* homepage */
-	
+	.navbar-toggler {
+		position: absolute;
+		left: 85%;
+		top: -7vmin;
+	}
+
+	/* homepage */
+
 	.carouselBottomBtns {
 		top: 24vmin;
 	}
@@ -723,58 +863,114 @@ a {
 }
 
 @media (max-width: 768px) {
-    
-    .navbar-collapse {
+	/* buggypage */
+	.buggyPage .onlyLaptop {
+		display: none;
+	}
+
+	.buggyPage .whatIsBuggy {
+		min-width: 100%;
+		margin: auto;
+	}
+
+	.buggyPage .whenIsIt {
+		clear: both;
+		margin: 5% 0px 5% 0px;
+		min-width: 100%;
+	}
+
+	.buggyPage .video {
+		min-width: 100%;
+		margin: 5% 0px 5% 0px;
+	}
+
+	.buggyPage .card1 {
+		width: 100%;
+	}
+
+	.buggyPage .onlyMobile {
+		margin: 5% 25% 10% 25%;
+	}
+
+	.buggyPage .mobilecarouseltext {
+		text-align: center;
+		margin: 3px;
+		font-size: 20px;
+	}
+
+	.buggyPage #card_separation {
+		margin: 2% 0px 2% 0px;
+	}
+
+	.buggyPage #card_mobile {
+		width: 100%;
+	}
+
+	/* end buggy page */
+	.navbar-brand {
+		height: 10px;
+	}
+
+	.navbar-collapse {
 		margin-top: 5px;
 		margin-bottom: 5px;
 		padding: 0;
-		position: relative; 
+		position: relative;
 		/* top: -20vmin; */
 	}
-    
-    .footer .col-md-4:not(:last-child) {
+
+	.footer .col-md-4:not(:last-child) {
 		margin-bottom: 20px; /* Add space between columns when they stack on mobile */
 	}
 	.mobileNotDisplay {
 		display: none;
 	}
-    /* .navbar-toggler {
-		top: -10vmin;
-        left: 85%;
-	} */
-    .desk-top-view {
+
+	.desk-top-view {
 		display: none;
 	}
 
-    .race-info span {
+	.race-info span {
 		/* Hide the race info text on mobile */
 		display: none;
 	}
 
-    .header-top .container-fluid .row > div:first-child > span {
+	.header-top .container-fluid .row > div:first-child > span {
 		/* Specific targeting to hide the "CMU BUGGY ALUMNI ASSOCIATION" text on mobile */
 		display: none;
 	}
 
-    .mobile-only {
+	.mobile-only {
 		/* Show the "BAA" text and logo on mobile */
 		display: flex; /* Aligns items inline and centers them vertically */
 		align-items: center;
 	}
 }
 
-
 @media screen and (min-width: 768px) {
-    .navbar {
-        margin-bottom: 0;
-    }
+	/* buggyPage */
+	.buggyPage .onlyMobile {
+		display: none;
+	}
+	/* end buggy page */
 
-    .desk-top-view {
+
+	.navbar {
+		margin-bottom: 0;
+	}
+
+	.desk-top-view {
 		display: block;
 	}
 	.mobileNotDisplay {
 		display: block;
 	}
+
+    /* homepage */
+    .homepage .navbar-collapse {
+        display: flex;
+        justify-content: end;
+    }
 
 	.carouselBottomBtns {
 		top: 28vmin; /*40vmin*/
@@ -808,7 +1004,7 @@ a {
 }
 
 @media (max-width: 992px) {
-    /* .mobile-only {
+	/* .mobile-only {
         display: block;
     } */
 
@@ -824,21 +1020,23 @@ a {
 }
 
 @media screen and (min-width: 992px) {
-    /* homepage */
-    .race-info span {
+	/* homepage */
+    
+
+	.race-info span {
 		/* Hide the race info text on mobile */
 		display: block;
 	}
 
-    .header-top .container-fluid .row > div:first-child > span {
+	.header-top .container-fluid .row > div:first-child > span {
 		/* Specific targeting to hide the "CMU BUGGY ALUMNI ASSOCIATION" text on mobile */
 		display: block;
 	}
 
-    .mobile-only {
-        /* hides the "BAA" text and logo on mobile */
-		display: none; 
-    }
+	.mobile-only {
+		/* hides the "BAA" text and logo on mobile */
+		display: none;
+	}
 
 	.desk-top-view {
 		display: block;
@@ -875,7 +1073,7 @@ a {
 }
 
 @media screen and (min-width: 1200px) {
-    /* homepage */
+	/* homepage */
 	.carouselBottomBtns {
 		top: 43vmin;
 	}
@@ -894,4 +1092,3 @@ a {
 		height: 85vmin;
 	}
 }
-
