--- a/styles.css
+++ b/styles.css
@@ -606,6 +606,7 @@ a {
 	position: relative;
 	top: -8vmin;
 }
+
 .record-section {
 	background-color: #aeacac; /* Adjust the color to match the exact shade you want */
 	color: white;
@@ -674,6 +675,8 @@ a {
 
 .listtitle {
 	border-bottom: 1px solid #a30707; /* Light gray border for list items */
+    display: flex;
+    justify-content:baseline;
 }
 
 .linkColor {
@@ -690,6 +693,22 @@ a {
 	color: black;
 	text-decoration: none; /* Ensure no underline on hover */
 }
+
+
+.history .expandBtn {
+    /* these are the expan arror icon containers */
+    width: 10vmin;
+    height: 10vmin;
+    position: relative;
+    top: -1vmin;
+}
+
+.history .expandBtnImg {
+    width: 5vmin;
+    height: 5vmin;
+}
+
+
 /* End the history content (list) here */
 
 /* Mobile */
@@ -788,6 +807,11 @@ a {
 		position: relative;
 		top: -8vmin;
 	}
+
+    /* history page */
+    .custom-section h2 {
+        font-size: 1.8em;
+    }
 }
 
 @media screen and (min-width: 576px) {
@@ -857,6 +881,11 @@ a {
 	.iconImg {
 		width: 8vmin;
 	}
+
+    /* history page */
+    .history .expandBtn {
+        display: none;
+    }
 }
 
 @media (max-width: 768px) {
